--- a/CDM/index.html
+++ b/CDM/index.html
@@ -28,7 +28,7 @@
             <li><a href="#home">Home</a></li>
             <li><a href="#facility">Facility</a></li>
             <li><a href="#foods">Foods</a></li>
-            <li><a href="#">About us</a></li>
+            <li><a href="#about-us">About us</a></li>
           </ul>
         </nav>
         <button class="open-menu" id="open-menu">
@@ -290,7 +290,7 @@
         <h1>Colegio De Montalban</h1>
       </div>
 
-      <div class="description">
+      <div class="description" id="about-us">
         <h3>About us</h3>
         <p>REACH Academy is a community of learners including students, parents and staff who are dedicated to creating
           an academically rigorous, culturally caring and inclusive learning environment. We are Reaching Excellence in
